fix separator lines having different length on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,11 @@ section {
   padding-bottom: 50px;
 }
 
-#courses {
+section {
+  padding: 15px;
+}
+
+.section-content {
   border-top: 2px solid black;
 }
 
